<resources>
    <string name="app_name">Movie App</string>
    <!-- Strings related to login -->
    <string name="prompt_login">Enter User Login</string>
    <string name="prompt_password">Enter User Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_login">Not a valid login</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_name">Name must be >1 characters</string>
    <string name="invalid_surname">Surname must be >1 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_favourites">My Favourites</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_movies">Top Movies</string>
    <string name="username">UserName</string>
    <string name="poster_of_movie">poster of movie</string>
    <string name="back_to_first_page">back to first page</string>
    <string name="add_to_favorite_movie">add to favorite movie</string>
    <string name="action_sing_up">Sing up</string>
    <string name="action_register">Register</string>
    <string name="prompt_name">Enter User Name</string>
    <string name="prompt_surname">Enter User Surname</string>
    <string name="tv_login_text">Login:</string>
    <string name="tv_password_text">Password:</string>
    <string name="tv_name_text">Name:</string>
    <string name="tv_surname_text">Surname:</string>
    <string name="sign_out">Sing out</string>
</resources>